# workshop

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  about.html  index.html  index.md  mkdocs.yml  print_page.html  pyproject.toml  requirements.txt  schedule.html  setup.html  setup.md  sitemap.xml
.github/workflows/: deploy.yml
docs/: 00_introduction.md  01_setup.md  06_ecosystem.md  about.md  home.md  index.md  main.md  schedule.md
docs/lesson_1/: 03_control_flow.md  04_functions.md  05_classes.md
docs/material/: 01_fundamentals.md  04_classes.md  classes.md  collections.md  control_flow.md  ecosystem.md  functions.md  fundamentals.md  introduction.md
docs/notebooks/: exercise_1.ipynb
docs/notebooks/exercises/: bank.ipynb
docs/notebooks/solutions/: bank.ipynb
material/: classes.html  collections.html  control_flow.html  control_flow.md  ecosystem.html  ecosystem.md  functions.html  fundamentals.html  introduction.html
notebooks/exercises/: bank.html
notebooks/solutions/: bank.html  bank.ipynb
scripts/: create_exercises.py
search/: search_index.json
