[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["luca-capone <58292893+luca-capone@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
markdown = "^3.5.1"
mkdocs = "^1.5.3"
ruff = "^0.1.11"
types-markdown = "^3.5.0.20240106"
mkdocs-material-extensions = "^1.3.1"
pymdown-extensions = "^10.7"
mkdocs-material = "^9.5.3"
markdown-callouts = "^0.3.0"
mkdocs-section-index = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
